# postgraas_server

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.md  CHANGES.rst  COPYING  LICENSE.txt  MANIFEST.in  README.rst  application.cfg  connection.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup_integration_test_docker.sh
deploy/: HOSTS  Vagrantfile  deploy.yml  developing.yml  gunicorn_logging.conf  provisioning.yml  supervisord.conf  vagrant_inventory
deploy/group_vars/: default  prod
deploy/roles/deploy-app_generic/: README.md
deploy/roles/deploy-app_generic/defaults/: main.yml
deploy/roles/deploy-app_generic/meta/: main.yml
deploy/roles/deploy-app_generic/tasks/: main.yml
deploy/roles/deploy_flask_app/tasks/: main.yml
deploy/roles/supervisor_monitor/: README.md
deploy/roles/supervisor_monitor/defaults/: main.yml
deploy/roles/supervisor_monitor/handlers/: main.yml
deploy/roles/supervisor_monitor/meta/: .galaxy_install_info
deploy/roles/supervisor_monitor/tasks/: main.yml
deploy/roles/supervisor_monitor/templates/: app.ini.j2
deploy/roles/supervisor_venv/: README.md
deploy/roles/supervisor_venv/defaults/: main.yaml
deploy/roles/supervisor_venv/handlers/: main.yml
deploy/roles/supervisor_venv/meta/: .galaxy_install_info
deploy/roles/supervisor_venv/tasks/: main.yaml
deploy/roles/supervisor_venv/templates/: supervisor-http.ini.j2  supervisord.conf.j2
deploy/templates/: app.ini.j2  postgraas_server.cfg.j2
docs/: Makefile  conf.py  configuration.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst
postgraas_server/: __init__.py  _version.py  configuration.py  create_app.py  create_db.py  init_db.py  management_database.py  management_datamodel.py  management_resources.py  postgraas_api.py  postgres_instance_driver.py  prometheus_app.py  resources.py  utils.py
postgraas_server/backends/: __init__.py  exceptions.py
postgraas_server/backends/docker/: __init__.py  create_db.py  postgres_instance_driver.py
postgraas_server/backends/postgres_cluster/: __init__.py  postgres_cluster_driver.py
tests/: conftest.py
tests/test_integration/: application.cfg  postgraas_server.cfg  test_backend_behaviour.py  test_create_db.py  test_init_db.py  test_management_database.py  test_postgraas_api.py  test_postgras_api.py  utils.py
tests/test_integration/backends/postgres_cluster/: test_postgres_cluster_driver.py
tests/test_unit/: application.cfg  application_secure.cfg  secret_file.json  test_backends_plugin.py  test_configuration.py
tests/test_unit/backends/postgres_cluster/: test_postgres_cluster_driver.py
