[metadata]
name = postgraas_server
summary = Postgraas is a super simple PostgreSQL-as-a-service
author = Sebastian Neubauer
author-email = sebineubauer@gmail.com
license = Apache-2
home-page = http://postgraas-server.readthedocs.io
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = postgraas_server.module:function
# For example:
console_scripts =
    postgraas_init = postgraas_server.init_db:main
    postgraas_create = postgraas_server.backends.docker.create_db:main
    prometheus_app = postgraas_server.prometheus_app:run_server
# as well as other entry_points.


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    postgraas_server
# data_files =
#    share/postgraas_server_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
docker =
    docker
secure-config =
    secure-config
prometheus =
    prometheus-client


[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov postgraas_server --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = false
blank_line_before_class_docstring = false
coalesce_brackets = false
column_limit = 100
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
indent_dictionary_value = false
split_before_dict_set_generator = false
split_arguments_when_comma_terminated = false

[flake8]
ignore = F999,E501,E128,E124,E402,W503,E731,C901
max-line-length = 100
exclude = .git,*/migrations/*,*/upgrade/*,*/alembic/*,node_modules/*,docs/*,doc/*
